# marketing-intelligence

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
docs/: README.md
docs/api/: endpoints.md
docs/architecture/: data-flow.md  ml-pipeline.md  overview.md  rag-system.md
docs/deployment/: docker.md  monitoring.md
docs/development/: setup.md  testing.md
models/: amazon-sales-insights-strategy.ipynb
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml  marketing-intelligence.json
src/: __init__.py  config.py  main.py
src/analysis/: __init__.py  eda.py
src/api/: schemas.py
src/api/routes/: analysis.py  predict.py  qa.py
src/data/: loader.py  preprocessor.py
src/llm/: __init__.py  gemini_client.py  prompts.py
src/ml/: __init__.py  drift.py  explainer.py  predictor.py  trainer.py
src/observability/: __init__.py  logging.py  metrics.py
src/rag/: embedder.py  indexer.py  retriever.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/load/: locustfile.py
tests/unit/: test_data_loader.py  test_eda.py  test_embedder.py  test_predictor.py  test_preprocessor.py  test_safety.py  test_schemas.py
