[project]
name = "marketing-data-intelligence"
version = "0.1.0"
description = "Intelligent ML system for marketing data analysis with discount prediction and RAG-powered Q&A"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # API Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    
    # ML/Data Processing
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "lightgbm>=4.3.0",
    
    # Vector Database & Embeddings
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.3.0",
    
    # LLM
    "google-genai>=1.0.0",
    
    # Text Analysis
    "textblob>=0.18.0",
    
    # Configuration & Environment
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0",
    
    # Explainability
    "shap>=0.46.0,<0.47.0",
    "numba>=0.60.0",
    
    # Monitoring & Observability
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    
    # Utilities
    "httpx>=0.26.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "locust>=2.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
